--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.4",
@@ -14,6 +15,7 @@
     "framer-motion": "^12.7.3",
     "lucide-react": "^0.488.0",
     "next": "15.3.0",
+    "next-sitemap": "^4.2.3",
     "postcss": "^8.5.3",
     "quadracode": "file:",
     "react": "^19.0.0",
